<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.nelson.beachfinder.SearchActivity"
    tools:showIn="@layout/app_bar_search">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="285dp"
                android:layout_marginBottom="46dp"
                android:contentDescription="@string/Image_description"
                android:paddingTop="50dp"
                app:srcCompat="@drawable/search_icon_yes" />

            <AutoCompleteTextView
                android:id="@+id/auto_comp_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/BeachName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="66dp"
                    android:layout_marginStart="50dp"
                    android:layout_weight="1"
                    android:onClick="goBeachListActivity"
                    android:text="@string/search_button"
                    tools:layout_editor_absoluteX="148dp"
                    tools:layout_editor_absoluteY="379dp" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="50dp"
                    android:layout_weight="1"
                    android:onClick="goAdvancedSearchActivity"
                    android:text="@string/Advanced" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>



</android.support.constraint.ConstraintLayout>
