<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.nelson.beachfinder.SelectedBeach"
    tools:showIn="@layout/app_bar_selected_beach">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_selected_beach"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto"
                android:text="Nombre Playa "
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="147dp"
                tools:layout_editor_absoluteY="172dp" />

            <ImageView
                android:id="@+id/icon_selected_beach"
                android:layout_width="match_parent"
                android:layout_height="273dp"
                android:layout_marginBottom="10dp"
                app:srcCompat="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:text="@string/Button_route_selected_beach"
                    android:typeface="normal" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="go_pictures_activity"
                    android:text="@string/Button_Pictures_selected_beach"
                    android:textAllCaps="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="go_comments_activity"
                    android:text="@string/Button_Comments_selected_beach"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="go_description_activity"
                    android:text="@string/Button_Description_selected_beach"
                    android:textAllCaps="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:text="@string/Button_Prices_selected_beach" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:text="@string/Button_Weather_selected_beach" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
